# tim

./: And.cpp  Bool.cpp  BoolType.cpp  CMakeLists.txt  Exp.cpp  FnType.cpp  Int.cpp  IntType.cpp  Minus.cpp  Not.cpp  Or.cpp  Plus.cpp  ReductionError.cpp  TupleType.cpp  TypeError.cpp  Unit.cpp  UnitType.cpp  Value.cpp  VoidType.cpp  and.c  apply.c  boolean.c  environment.c  environment.h  expressions.c  expressions.h  function.c  get_var.c  integer.c  minus.c  not.c  or.c  plus.c  product.c  sum.c  tim  tim.c  tim.cpp  tim.h  types.c  (+3 more)
misc/: BoolType.h  Int.h  IntType.h  Plus.h  ReductionError.h  TupleType.h  TypeError.h  UnitType.h  Value.h  VoidType.h
